# basher-awx

./: .gitlab-ci.yml  .travis.yml  CONTRIBUTING.md  LICENSE  README.md  cookiecutterrc.yml  package.sh  pyproject.toml
demo/: input
lib/: awx-update-projects.sh  awx_update_projects.sh
tests/: data.bash
